--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: green;
+  height: 1000px;
 }
 
 .App-logo {
@@ -30,4 +32,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+img{
+  width:100px;
+}
+
+.container {
+  overflow:auto;
+  text-align: center;
+}
+
+.sidebyside {
+  display: inline-block;
+  float:left;
+  width: 100px;
+  margin:5px;
 }
